...
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="100dp"
        android:onClick="viewRestaurantClicked"
        android:text="View restaurant"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/merchant_singupb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button26"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/merchant_singupb"
...
