...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"
            android:text="Merchant"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="123dp"
            android:layout_height="32dp"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
...
        app:boxStrokeColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:layout_constraintTop_toBottomOf="@id/username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PasswordField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textAlignment="center" />

<!--    <TextView-->
<!--        android:id="@+id/textView3"-->
<!--        android:layout_width="119dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_marginStart="26dp"-->
<!--        android:layout_marginLeft="26dp"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:layout_marginEnd="51dp"-->
<!--        android:layout_marginRight="51dp"-->
<!--        android:layout_marginBottom="35dp"-->
<!--        android:text="Username"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/textView5"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/emailField"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView5"-->
...
<!--        android:layout_marginLeft="18dp"-->
<!--        android:layout_marginEnd="14dp"-->
<!--        android:layout_marginRight="14dp"-->
<!--        android:layout_marginBottom="92dp"-->
<!--        android:text="Password"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/button4"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/PasswordField"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView3" />-->

    <Button
        android:id="@+id/button4"
...
